# je_arm_pcb_inspection_sm

./: CARTESIAN_POSES_README.md  CMakeLists.txt  README.md  package.xml  state_diagram.mmd
config/: gripper_commands.yaml  test_gripper.yaml
config/move_group_client/cartesian_offsets/: pick_offset.yaml  place_offset.yaml  wait_resources_offset.yaml
config/move_group_client/cartesian_states/: pick.yaml  place.yaml
config/move_group_client/joint_states/: back_to_idle_home.yaml  dual_back_to_idle_home.yaml  dual_pick_p1.yaml  dual_pick_p2.yaml  inspect.yaml  pick.yaml  pick_p1.yaml  pick_p2.yaml  pick_p3.yaml  place.yaml  place_above.yaml
config/move_group_client/known_states/: home.yaml  pick.yaml  place.yaml
include/je_arm_pcb_inspection_sm/: events.hpp  je_arm_pcb_inspection_sm.hpp  sm_data.hpp
include/je_arm_pcb_inspection_sm/components/: cp_business_key_mapper.hpp  cp_top_level_flow.hpp
include/je_arm_pcb_inspection_sm/orthogonals/: or_arm.hpp  or_keyboard.hpp
include/je_arm_pcb_inspection_sm/states/: st_activate.hpp  st_back.hpp  st_back_to_idle.hpp  st_delay.hpp  st_idle.hpp  st_pause.hpp  st_pause_resume_router.hpp  st_test_gripper.hpp  st_wait_resources.hpp  st_work.hpp
include/je_arm_pcb_inspection_sm/utils/: gripper_command_loader.hpp  logging.hpp  pick_offset_loader.hpp  place_offset_loader.hpp  test_gripper_config_loader.hpp  wait_resources_offset_loader.hpp
include/my_robot_arm_sm/: events.hpp  my_robot_arm_sm.hpp  sm_data.hpp
include/my_robot_arm_sm/components/: cp_business_key_mapper.hpp  cp_top_level_flow.hpp
include/my_robot_arm_sm/orthogonals/: or_arm.hpp  or_keyboard.hpp
include/my_robot_arm_sm/states/: st_back.hpp  st_idle.hpp  st_pause.hpp  st_pause_resume_router.hpp  st_wait_resources.hpp  st_work.hpp
launch/: je_arm_pcb_inspection_sm.launch.py  je_arm_state_machine.launch.py  my_robot_arm_sm.launch.py
msg/: PcbDetection.msg  PlaceSlot.msg
scripts/: fake_trajectory_executor.py
src/je_arm_pcb_inspection_sm/: je_arm_pcb_inspection_sm_node.cpp
src/my_robot_arm_sm/: fake_trajectory_executor.cpp  my_robot_arm_sm_node.cpp
(+34 files in other folders)
