<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>je_arm_pcb_inspection_sm</name>
  <version>2.3.20</version>
  <description>Minimal SMACC2 state machine for JEARM Home/Pick/Place motions</description>
  <maintainer email="smacc2@smacc2.cool">SMACC2 is cool</maintainer>
  <license>Apache-2.0</license>
  <license>MyLicense</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>libboost-thread-dev</depend>

  <depend>cl_ros2_timer</depend>
  <depend>smacc2</depend>
  <depend>cl_moveit2z</depend>
  <depend>my_jearm_moveit_config</depend>
  <depend>cl_keyboard</depend>
  <depend>my_robot_arm_cb_library</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rclcpp</depend>
  <depend>ament_index_cpp</depend>
  <depend>yaml-cpp</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
